fix overflow of x on customer tab on user show page. too wide unless hideing overflow-x

--- a/app/assets/stylesheets/customers.css.scss
+++ b/app/assets/stylesheets/customers.css.scss
@@ -1,5 +1,6 @@
 #customer-container{
 	position: relative;
+	overflow-x: hidden;
 }
 
 #new-customer-form{
